[package]
name = "colek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
sysinfo = "0.29"
walkdir = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
