[package]
name = "colek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
dirs = "5.0.1"
log = "0.4"
paste = "1.0.14"
rayon = "1.8.0"
sysinfo = "0.29"
walkdir = "2"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

## BROWSER STEALER?
# rusqlite = "0.29.0"
# secret-service = "2.0.0"
# pbkdf2 = "0.10"
# hmac = "0.12.1"
# sha-1 = "0.10.0"
# cbc = "0.1.2"
# aes = "0.8.1"
